# engine

./: .clang-format  CMakeLists.txt  CMakePresets.json  suppress.cppcheck
cmake/: compile_options.cmake  static_analysis_tools.cmake
examples/: CMakeLists.txt  main.cpp  mygame.cpp  mygame.hpp
include/: CMakeLists.txt
include/engine/: engine.hpp  game.hpp  graphics.hpp
libs/: gtest.cmake  sdl.cmake
modules/backend/: CMakeLists.txt
modules/backend/include/backend/: backend.hpp  backend_events_handler.hpp  key_event.hpp
modules/backend/src/: backend.cpp
modules/backend/src/sdl/: sdl_backend.cmake  sdl_backend.cpp  sdl_backend.hpp  sdl_entry_point.cpp
modules/backend/src/stub/: CMakeLists.txt  stub_backend.cpp  stub_backend.hpp
modules/engine_backend/: CMakeLists.txt  engine_backend.cpp  engine_backend.hpp  engine_backend_factory.hpp
modules/engine_backend/sdl/: CMakeLists.txt  engine_backend_factory.cpp  sdl_backend.cmake  sdl_backend.cpp  sdl_backend.hpp  sdl_entry_point.cpp
modules/engine_backend/stub/: CMakeLists.txt  engine_backend_factory.cpp  stub_backend.cpp  stub_backend.hpp
src/: CMakeLists.txt  engine.cpp  game.cpp  graphics.cpp  src.cmake
tests/: CMakeLists.txt
tests/run/: CMakeLists.txt  main.cpp
tests/sdl_backend/: CMakeLists.txt  main.cpp
tests/stub_backend/: CMakeLists.txt  main.cpp
